[gd_scene load_steps=17 format=3 uid="uid://bsacjcvmo4kah"]

[ext_resource type="Script" path="res://Objects/rooms/main_menu.gd" id="1_3v1nl"]
[ext_resource type="LabelSettings" uid="uid://0c70bl3qfa80" path="res://text_settings.tres" id="1_rtymg"]
[ext_resource type="FontFile" uid="uid://yyp2l3s4qnye" path="res://Assets/FONTS/ominous-outlaw/Ominous Outlaw Free.otf" id="2_j8a6n"]
[ext_resource type="PackedScene" uid="uid://cmmc1grsbix0j" path="res://Objects/door.tscn" id="3_0hcah"]
[ext_resource type="Environment" uid="uid://c2gcjyhvtkain" path="res://Worl_eviroment.tres" id="4_7512d"]
[ext_resource type="AudioStream" uid="uid://b0vlo8wfahwyu" path="res://Assets/Sounds/Main Menu Music.wav" id="6_kwxme"]
[ext_resource type="AudioStream" uid="uid://s2gcmgieq2ru" path="res://Assets/Sounds/Main Menu Music 2.wav" id="7_gwoic"]

[sub_resource type="LabelSettings" id="LabelSettings_htwf6"]
font = ExtResource("2_j8a6n")
font_size = 100

[sub_resource type="Animation" id="Animation_tov8r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.649, 1.58248, 0.92733)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.03408, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tupio"]
resource_name = "Start - Continue"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.9, 1.1, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(2.649, 1.58248, 0.92733), Vector3(3.04956, 1.58248, 0.92733), Vector3(0.160221, 1.58248, 0.508307)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 2.03408, 0), Vector3(0, 1.44686, 0), Vector3(0, 1.5475, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfgb6"]
_data = {
"RESET": SubResource("Animation_tov8r"),
"Start - Continue": SubResource("Animation_tupio")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oanx6"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0hn3h"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_v84ub"]
material = SubResource("StandardMaterial3D_0hn3h")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cd214"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_o55c0"]
material = SubResource("StandardMaterial3D_cd214")

[node name="Main Menu" type="Node3D"]
script = ExtResource("1_3v1nl")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -384.0
offset_right = 3366.0
offset_bottom = 1043.0
grow_horizontal = 2
scale = Vector2(0.204352, 0.204352)
text = "little troubles"
label_settings = ExtResource("1_rtymg")

[node name="Option Buttons" type="GridContainer" parent="Control"]
layout_mode = 0
offset_left = 36.0
offset_top = 213.0
offset_right = 510.0
offset_bottom = 485.0

[node name="New Game" type="Panel" parent="Control/Option Buttons"]
custom_minimum_size = Vector2(474, 80)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Option Buttons/New Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 153.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.755498, 0.755498)
text = "Start"
label_settings = SubResource("LabelSettings_htwf6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="New Game Button" type="Button" parent="Control/Option Buttons/New Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="VSplitContainer" type="VSplitContainer" parent="Control/Option Buttons"]
layout_mode = 2
split_offset = 9

[node name="VSplitContainer6" type="VSplitContainer" parent="Control/Option Buttons"]
layout_mode = 2
split_offset = 9

[node name="VSplitContainer4" type="VSplitContainer" parent="Control/Option Buttons"]
layout_mode = 2
split_offset = 9

[node name="Continue" type="Panel" parent="Control/Option Buttons"]
custom_minimum_size = Vector2(474, 80)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Option Buttons/Continue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 153.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.755498, 0.755498)
text = "Continue
"
label_settings = SubResource("LabelSettings_htwf6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue Button" type="Button" parent="Control/Option Buttons/Continue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="VSplitContainer2" type="VSplitContainer" parent="Control/Option Buttons"]
layout_mode = 2

[node name="VSplitContainer5" type="VSplitContainer" parent="Control/Option Buttons"]
layout_mode = 2

[node name="VSplitContainer3" type="VSplitContainer" parent="Control/Option Buttons"]
layout_mode = 2

[node name="Exit" type="Panel" parent="Control/Option Buttons"]
custom_minimum_size = Vector2(474, 80)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Option Buttons/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 153.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.755498, 0.755498)
text = "Exit
"
label_settings = SubResource("LabelSettings_htwf6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit Button" type="Button" parent="Control/Option Buttons/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="door" parent="." instance=ExtResource("3_0hcah")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.905584)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.446888, 0, 0.89459, 0, 1, 0, -0.89459, 0, -0.446888, 2.649, 1.58248, 0.92733)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("4_7512d")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.19473, 1.85613, 2.17477)
light_color = Color(0.79644, 1, 0.935109, 1)
light_energy = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rfgb6")
}

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.497459, 1.06769, 1.35681)
flip_faces = true
size = Vector3(7.57021, 4.43811, 7.05298)
material = SubResource("StandardMaterial3D_oanx6")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="."]
transform = Transform3D(-3.87309e-08, 0.614117, -8.57657e-08, 0, -2.68439e-08, -1.96209, -0.88606, -2.68439e-08, 3.74894e-15, -0.598937, 0.994148, 0.43676)
mesh = SubResource("CylinderMesh_v84ub")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="."]
transform = Transform3D(1.19791, 0, 0, 0, -2.12285e-08, -1.44298, 0, 0.485652, -6.30749e-08, -0.624354, 0.949133, 0.453351)
mesh = SubResource("BoxMesh_o55c0")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kwxme")
volume_db = -14.696
autoplay = true

[node name="Music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_gwoic")
volume_db = -80.0
autoplay = true

[connection signal="pressed" from="Control/Option Buttons/New Game/New Game Button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Control/Option Buttons/Continue/Continue Button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Control/Option Buttons/Exit/Exit Button" to="." method="_on_exit_button_pressed"]
[connection signal="finished" from="Music" to="." method="_on_audio_stream_player_finished"]
[connection signal="finished" from="Music2" to="." method="_on_music_2_finished"]
